// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/file-icon/FileIcon should render 64 icon when dimension is defined 1`] = `
<FileDefault32
  height={64}
  width={64}
/>
`;

exports[`icons/file-icon/FileIcon should render default 32 icon when no extension and dimension is defined 1`] = `
<FileDefault32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when HEIC is defined 1`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when HEIF is defined 1`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when doc is defined 1`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when docm is defined 1`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when docx is defined 1`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when gdoc is defined 1`] = `
<FileDocs32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when gsheet is defined 1`] = `
<FileSheets32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when gslide is defined 1`] = `
<FileSlides32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when gslides is defined 1`] = `
<FileSlides32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when heic is defined 1`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when heif is defined 1`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when key is defined 1`] = `
<FileKeynote32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when numbers is defined 1`] = `
<FileNumbers32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when pages is defined 1`] = `
<FilePages32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when ppt is defined 1`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when pptm is defined 1`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when pptx is defined 1`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when xbd is defined 1`] = `
<FileXbd32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when xdw is defined 1`] = `
<FileXdw32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when xls is defined 1`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when xlsb is defined 1`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when xlsm is defined 1`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when zip is defined 1`] = `
<FileZip32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render title when title is defined 1`] = `
<FileDefault32
  height={32}
  title="title"
  width={32}
/>
`;
